--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,13 @@
- /** {
-    margin: 0 20px 0 20px;
-    padding: 0 20px 0 20px;
-}*/
+
 
 
 
 body{
     width: auto;
     display: inline;
-    margin-top:0;
+    /*margin-top:0;
     margin-bottom: 0;
+    padding-top: 0;*/
 }
 
   
@@ -41,6 +39,7 @@ body{
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
+    padding-right: 10px;
   }
 
   main div img{
@@ -62,6 +61,7 @@ body{
       float: left;
       padding-left: 193.5px;
       margin-top: 0;
+      margin-bottom: 30px;
 
     }
 
@@ -69,6 +69,12 @@ body{
         float: left;
         padding-left: 30px;
 
+    }
+
+    span {
+        margin-top: 30px;
+        padding-top: 30px;
+        
     }
 
 
@@ -86,15 +92,14 @@ body{
 
     }
 
-
+        main span p {
+            float: left;
+        }
 
     main a {
         float: left;
     }
 
-    main {
-        padding-bottom: 30px;
-    }
 
     footer {
         clear: both;
@@ -105,7 +110,19 @@ body{
        display: block;
         margin-left: auto;
         margin-right: auto;
-        padding-top: 30px;
+    }
+
+    main span a {
+        text-decoration: none;
+        color: white;
+        background-color: black;
+        border-radius: 2%;
+        width: 200px;
+        height: 50px;
+        font-size: large;
+        padding-left: 30px;
+        text-align: center;
+        te
     }
 
 
@@ -140,48 +157,3 @@ body{
 
 
 
-
-
-/*
-body {
-    width: 960px;
-    margin: auto;
-    line-height: 1.5;
-    padding: 30px;
-  }
-
-
-header {
-    /* text-align: center; */
-    /*background-color: #444444;
-    /*padding: 10px 0;*/
-    /*text-align: center;
-
-}
-
-
-header nav span {
-    float: right;
-    margin: 24px;
-    margin-right: 30%;
-}
-
-a {
-    display: inline;
-    padding: 0 40px ;
-    text-decoration: none;
-    color: #969696;
-    /* margin: 50px; */
-   /* text-align: center;
-    /*margin-left: 8%;*/
-/*}
-
-img {
-    padding: 0 40px;
-}
-
-
-footer {
-    background-color: #ddd;
-}
-/*
